--- a/Numerical Analysis Bisection Method (Interval Halving).ipynb
+++ b/Numerical Analysis Bisection Method (Interval Halving).ipynb
@@ -25,59 +25,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bisection(f,a,b,N, tol):\n",
-    "    '''Approximate solution of f(x)=0 on interval [a,b] by bisection method.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    f : function\n",
-    "        The function for which we are trying to approximate a solution f(x)=0.\n",
-    "    a,b : numbers\n",
-    "        The interval in which to search for a solution. The function returns\n",
-    "        None if f(a)*f(b) >= 0 since a solution is not guaranteed.\n",
-    "    N : (positive) integer\n",
-    "        The number of iterations to implement.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    x_N : number\n",
-    "        The midpoint of the Nth interval computed by the bisection method. The\n",
-    "        initial interval [a_0,b_0] is given by [a,b]. If f(m_n) == 0 for some\n",
-    "        midpoint m_n = (a_n + b_n)/2, then the function returns this solution.\n",
-    "        If all signs of values f(a_n), f(b_n) and f(m_n) are the same at any\n",
-    "        iteration, the bisection method fails and return None.\n",
-    "\n",
-    "\n",
-    "    '''\n",
-    "    if f(a)*f(b) >= 0:\n",
-    "        print(\"Bisection method fails.\")\n",
+    "def bisection(a,b,f,M, delta, eps):\n",
+    "    u = f(a);\n",
+    "    v = f(b); \n",
+    "    e = b-a;\n",
+    "    if u*v >= 0:\n",
     "        return None\n",
-    "    a_n = a\n",
-    "    b_n = b\n",
-    "    for n in range(1,N+1):\n",
-    "        m_n = (a_n + b_n)/2;\n",
-    "        f_m_n = f(m_n);\n",
-    "        if f(a_n)*f_m_n < 0:\n",
-    "            a_n = a_n;\n",
-    "            b_n = m_n;\n",
-    "        elif f(b_n)*f_m_n < 0:\n",
-    "            a_n = m_n;\n",
-    "            b_n = b_n;\n",
-    "        elif abs(f_m_n) < tol:\n",
-    "            print('The exact solution', 'at iteration', n, 'Evaluation', f_m_n)\n",
-    "        else:\n",
-    "            print(\"Bisection method fails.\")\n",
-    "            return None\n",
-    "        return (a_n+b_n)/2"
+    "    else:\n",
+    "        for k in range(1,M+1): \n",
+    "            e = 0.5*e;\n",
+    "            c = a + e;\n",
+    "            w = f(c);\n",
+    "            print('Iteration', k, 'Value', c, 'Evaluation', w, 'Int', e)\n",
+    "            if abs(e)<delta or abs(w)<eps:\n",
+    "                return None\n",
+    "            if u*v<0:\n",
+    "                b = c;\n",
+    "                v = w;\n",
+    "            else:\n",
+    "                a = c;\n",
+    "                u = w;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,15 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The exact solution at iteration 1 Evaluation 0.0\n",
-      "6.0\n"
+      "Iteration 1 Value 6.0 Evaluation 0.0 Int 0.5\n"
      ]
     }
    ],
@@ -106,13 +81,13 @@
     "b = 6.5\n",
     "N = 100\n",
     "tol = 1/1000\n",
-    "roots_func = bisection(f, a,b,N,tol)\n",
-    "print(roots_func)"
+    "eps = 0.001\n",
+    "roots_func = bisection(a,b,f,N,tol,eps)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,31 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bisection method fails.\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Specify the interval: \n",
     "a = 5.5;\n",
     "b = 6.5; \n",
     "N = 100;\n",
-    "tol = 1/1000\n",
-    "roots_func2 = bisection(f2, a,b,N, tol)\n",
-    "print(roots_func2)"
+    "tol = 0.000001\n",
+    "roots_func2 = bisection(a,b,f2,N,tol,eps)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +150,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-2f4060d590ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0malg_roots2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptimize\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbisect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malg_roots2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-30-2f4060d590ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0malg_roots2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptimize\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbisect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malg_roots2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/scipy/optimize/zeros.py\u001b[0m in \u001b[0;36mbisect\u001b[0;34m(f, a, b, args, xtol, rtol, maxiter, full_output, disp)\u001b[0m\n\u001b[1;32m    548\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mrtol\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0m_rtol\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    549\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"rtol too small (%g < %g)\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_rtol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 550\u001b[0;31m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_zeros\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_bisect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrtol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxiter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfull_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    551\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresults_c\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfull_output\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    552\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: f(a) and f(b) must have different signs"
      ]
